# fuchar

./: .pre-commit-config.yaml  LICENSE  README.md  README.rst  pyproject.toml  setup.py
fuchar/: __init__.py  __main__.py  font.py
src/fuchar/: __init__.py  __main__.py
src/fuchar/fonts/: fuchar.py
